@@ -49,6 +49,12 @@ namespace gui
 		//! Returns pointer to the maximize button
 		virtual IGUIButton* getMaximizeButton() const { return 0;}
 
+		//! get draggable
+		virtual bool isDraggable() const;
+
+		//! get draggable
+		virtual void setDraggable(bool draggable);
+
 		void setSelected(s32 index=-1);
 
 	private:
@@ -62,6 +68,7 @@ namespace gui
 		CGUIPanel*	Panel;
 		s32 SelectedTexture;
 		bool Dragging;
+		bool IsDraggable;
 	};
 
 
